--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,16 @@
 spring.application.name=banking-app
+# MySQL connection
+spring.datasource.url=jdbc:mysql://localhost:3306/bank_db?createDatabaseIfNotExist=true
+spring.datasource.username=root
+spring.datasource.password=
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# JPA
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+
+# Thymeleaf
+spring.thymeleaf.cache=false
+
+# Server
+server.port=8080
